<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>SearchEngine</artifactId>
  <version>1.0-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>22.0.1</maven.compiler.source>
    <maven.compiler.target>22.0.1</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <maven.compiler.version>3.13.0</maven.compiler.version>
    <maven.surefire.version>3.2.5</maven.surefire.version>
    <puppycrawl.version>10.17.0</puppycrawl.version>
    <testcontainers.version>1.19.8</testcontainers.version>
    <mysql.version>8.4.0</mysql.version>
    <lombock.version>1.18.32</lombock.version>
    <liquibase.version>4.28.0</liquibase.version>
    <jsoup.version>1.17.2</jsoup.version>

    <checkstyle-maven-plugin.version>3.3.1</checkstyle-maven-plugin.version>
    <checkstyle.config.remote>
      https://notabug.org/Grigorii_Kuznetsov/dotfiles/raw/master/checks.xml
    </checkstyle.config.remote>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <version>${checkstyle-maven-plugin.version}</version>
        <configuration>
          <configLocation>checkstyle.xml</configLocation>
          <configLocation>${checkstyle.config.remote}</configLocation>
          <consoleOutput>true</consoleOutput>
          <violationSeverity>warning</violationSeverity>
          <logViolationsToConsole>false</logViolationsToConsole>
        </configuration>
        <executions>
          <execution>
            <id>verify-style</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven.surefire.version}</version>
        <configuration>
          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.6</version>
    <relativePath/>
  </parent>

  <repositories>
    <repository>
      <id>skillbox-gitlab</id>
      <url>https://gitlab.skillbox.ru/api/v4/projects/263574/packages/maven</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>${mysql.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>${jsoup.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombock.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.puppycrawl.tools</groupId>
      <artifactId>checkstyle</artifactId>
      <version>${puppycrawl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.liquibase</groupId>
      <artifactId>liquibase-core</artifactId>
      <version>${liquibase.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>mysql</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene.morphology</groupId>
      <artifactId>morph</artifactId>
      <version>1.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene.analysis</groupId>
      <artifactId>morphology</artifactId>
      <version>1.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene.morphology</groupId>
      <artifactId>dictionary-reader</artifactId>
      <version>1.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene.morphology</groupId>
      <artifactId>english</artifactId>
      <version>1.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.lucene.morphology</groupId>
      <artifactId>russian</artifactId>
      <version>1.5</version>
    </dependency>
  </dependencies>
</project>
